<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/interdiction_description" />

        <TextView
            android:id="@+id/txtOrganization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/interdiction_organization" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/txtStreetOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interdiction_street_one" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/txtStreetTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interdiction_street_two" />
    </TableRow>

</TableLayout>